weitere Querverweise und Quellenangaben

--- a/DSGVO-ExtendedVersion.bib
+++ b/DSGVO-ExtendedVersion.bib
@@ -125,5 +125,45 @@
   url          = {https://eur-lex.europa.eu/legal-content/DE/TXT/?uri=CELEX%3A32011R0182}
 }
 
+@misc { bfdi-dsfa-listen,
+  shorthand    = {DSFA-Listen},
+  title        = {Datenschutz-Folgenabschätzungen und Listen von Verarbeitungsvorgängen},
+  author       = {Bundesbeauftragter fpr den Datenschutz und die Informationssicherheit},
+  url          = {https://www.bfdi.bund.de/DE/Fachthemen/Inhalte/Technik/Datenschutz-Folgenabschaetzungen.html}
+}
 
+@misc { zaftda,
+  shorthand    = {ZAfTDa},
+  title        = {Zentralarchiv für Tätigkeitsberichte der Bundes- und der Landesdatenschutzbeauftragten sowie der Aufsichtsbehörden für den Datenschutz},
+  author       = {Stiftung Datenschutz},
+  url          = {https://www.zaftda.de/}
+}
+
+@misc { edpb-dec-reg,
+  shorthand    = {EDSA-DR},
+  title        = {Decisions taken by supervisory authorities and courts on issues handled in the consistency mechanism},
+  author       = {Europäische Datenschutzausschuss (EDSA)},
+  url          = {https://edpb.europa.eu/our-work-tools/consistency-findings/register-for-decisions_de}
+}
+
+@misc { edpb-cc-reg,
+  shorthand    = {EDSA-CCR},
+  title        = {Codes of Conduct, amendments and extensions},
+  author       = {Europäische Datenschutzausschuss (EDSA)},
+  url          = {https://edpb.europa.eu/our-work-tools/accountability-tools/register-codes-conduct-amendments-and-extensions-art-4011_de}
+}
+
+@misc { edpb-fossd-reg,
+  shorthand    = {EDSA-FOSSD},
+  title        = {Final One Stop Shop Decisions},
+  author       = {Europäische Datenschutzausschuss (EDSA)},
+  url          = {https://edpb.europa.eu/our-work-tools/consistency-findings/register-for-article-60-final-decisions_de}
+}
+
+@misc { edpb-bcr-reg,
+  shorthand    = {EDSA-BCR},
+  title        = {Approved Binding Corporate Rules},
+  author       = {Europäische Datenschutzausschuss (EDSA)},
+  url          = {https://edpb.europa.eu/our-work-tools/accountability-tools/bcr_de}
+}
 
