--- a/artikel/04.tex
+++ b/artikel/04.tex
@@ -105,7 +105,9 @@ Im Sinne dieser Verordnung bezeichnet der Ausdruck:
    denen Informationen über deren Gesundheitszustand hervorgehen;%
   \label{itm:04-15}
 
-  \item „Hauptniederlassung“%
+  \item „Hauptniederlassung“\comment{Wesentlichen Unterschied zwischen Verantwortlichen und Auftragsverarbeitern
+   beachten: bei Verantwortlichen ist die Hauptverwaltung die Niederlassung mit Entscheidungsbefugnis, bei
+   Auftragsverarbeitern der Hauptsitz bzw. Ort der Verarbeitung.}%
   \label{itm:04-16}
 
   \begin{enumerate}
