--- a/artikel/06.tex
+++ b/artikel/06.tex
@@ -12,14 +12,17 @@
 
   \begin{enumerate}
   
-    \item Die \hyperref[itm:04-1]{betroffene Person} hat ihre \hyperref[itm:04-11]{Einwilligung} zu der \hyperref
-     [itm:04-2]{Verarbeitung} der sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} für einen oder mehrere
-     bestimmte Zwecke gegeben;%
+    \item Die \hyperref[itm:04-1]{betroffene Person} hat ihre \hyperref[itm:04-11]{Einwilligung}\comment{\hyperref[ch:7]
+     {Artikel 7} beachten; Einwilligung als Verarbeitungsgrundlage führt bei automatisierten Verfahren zu Recht auf
+     Datenübertragbarkeit nach \hyperref[itm:20-1]{Artikel 20 Absatz 1}} zu der \hyperref[itm:04-2]{Verarbeitung} der
+     sie betreffenden \hyperref[itm:04-1]{personenbezogenen Daten} für einen oder mehrere bestimmte Zwecke gegeben;%
     \label{itm:06-1a}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} ist für die Erfüllung eines Vertrags, dessen Vertragspartei
-     die \hyperref[itm:04-1]{betroffene Person} ist, oder zur Durchführung vorvertraglicher Maßnahmen erforderlich, die
-     auf Anfrage der \hyperref[itm:04-1]{betroffenen Person} erfolgen;%
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist für die Erfüllung eines Vertrags\comment{Vertrag als
+     Verarbeitungsgrundlage führt bei automatisierten Verfahren zu Recht auf Datenübertragbarkeit nach \hyperref
+     [itm:20-1]{Artikel 20 Absatz 1}}, dessen Vertragspartei die \hyperref[itm:04-1]{betroffene Person} ist, oder zur
+     Durchführung vorvertraglicher Maßnahmen erforderlich, die auf Anfrage der \hyperref[itm:04-1]{betroffenen Person}
+     erfolgen;%
     \label{itm:06-1b}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Erfüllung einer rechtlichen Verpflichtung erforderlich, der
@@ -31,32 +34,34 @@
     \label{itm:06-1d}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} ist für die Wahrnehmung einer Aufgabe erforderlich, die im öffentlichen
-     Interesse liegt oder in Ausübung öffentlicher Gewalt erfolgt, die dem \hyperref[itm:04-7]
-     {Verantwortlichen} übertragen wurde;%
+     Interesse liegt\comment{Widerspruchsrecht nach \hyperref[itm:21-1]{Artikel 21 Absatz 1} beachten} oder in Ausübung
+     öffentlicher Gewalt erfolgt, die dem \hyperref[itm:04-7]{Verantwortlichen} übertragen wurde;%
     \label{itm:06-1e}
 
-    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Wahrung der berechtigten Interessen des \hyperref[itm:04-7]
-     {Verantwortlichen} oder eines \hyperref[itm:04-10]{Dritten} erforderlich, sofern nicht die Interessen oder
-     Grundrechte und Grundfreiheiten der \hyperref[itm:04-1]{betroffenen Person}, die den Schutz \hyperref[itm:04-1]
-     {personenbezogener Daten} erfordern, überwiegen, insbesondere dann, wenn es sich bei der \hyperref[itm:04-1]
-     {betroffenen Person} um ein Kind handelt.%
+    \item die \hyperref[itm:04-2]{Verarbeitung} ist zur Wahrung der berechtigten Interessen\comment{Interessen müssen
+     der betroffenen Person mitgeteilt werden, vgl. \hyperref[itm:13-1d]{Artikel 13 Absatz 1 Buchstabe d}
+     bzw. \hyperref[itm:14-2b]{Artikel 14 Absatz 2 Buchstabe b}; Widerspruchsrecht nach \hyperref[itm:21-1]{Artikel 21
+     Absatz 1} beachten}  des \hyperref[itm:04-7]{Verantwortlichen} oder eines \hyperref[itm:04-10]
+     {Dritten} erforderlich, sofern nicht die Interessen oder Grundrechte und Grundfreiheiten der \hyperref[itm:04-1]
+     {betroffenen Person}, die den Schutz \hyperref[itm:04-1]{personenbezogener Daten} erfordern, überwiegen,
+     insbesondere dann, wenn es sich bei der \hyperref[itm:04-1]{betroffenen Person} um ein Kind handelt.%
     \label{itm:06-1f}
 
   \end{enumerate}
 
-  Unterabsatz 1 Buchstabe f gilt nicht für die von Behörden in Erfüllung ihrer Aufgaben vorgenommene \hyperref[itm:04-2]
-  {Verarbeitung}.
+  \hyperref[itm:06-1f]{Unterabsatz 1 Buchstabe f} gilt nicht für die von Behörden in Erfüllung ihrer Aufgaben
+  vorgenommene \hyperref[itm:04-2]{Verarbeitung}.
 
   \item Die Mitgliedstaaten können spezifischere Bestimmungen zur Anpassung der Anwendung der Vorschriften dieser
-   Verordnung in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} zur Erfüllung von \hyperref[itm:06-1c]{Absatz 1
-   Buchstaben c} und \hyperref[itm:06-1e]{e} beibehalten oder einführen, indem sie spezifische Anforderungen für
-   die \hyperref[itm:04-2]{Verarbeitung} sowie sonstige Maßnahmen präziser bestimmen, um eine rechtmäßig und nach Treu
-   und Glauben erfolgende \hyperref[itm:04-2]{Verarbeitung} zu gewährleisten, einschließlich für andere besondere
-   Verarbeitungssituationen gemäß \hyperref[part:9]{Kapitel IX}.%
+   Verordnung in Bezug auf die \hyperref[itm:04-2]{Verarbeitung} zur Erfüllung von \hyperref[itm:06-1]{Absatz 1}
+   Buchstaben \hyperref[itm:06-1c]{c} und \hyperref[itm:06-1e]{e} beibehalten oder einführen, indem sie spezifische
+   Anforderungen für die \hyperref[itm:04-2]{Verarbeitung} sowie sonstige Maßnahmen präziser bestimmen, um eine
+   rechtmäßig und nach Treu und Glauben erfolgende \hyperref[itm:04-2]{Verarbeitung} zu gewährleisten, einschließlich
+   für andere besondere Verarbeitungssituationen gemäß \hyperref[part:9]{Kapitel IX}.%
   \label{itm:06-2}
 
-  \item Die Rechtsgrundlage für die \hyperref[itm:04-2]{Verarbeitungen} gemäß \hyperref[itm:06-1c]{Absatz 1 Buchstaben
-   c} und \hyperref[itm:06-1e]{e} wird festgelegt durch%
+  \item Die Rechtsgrundlage für die \hyperref[itm:04-2]{Verarbeitungen} gemäß \hyperref[itm:06-1]{Absatz 1}
+   Buchstaben \hyperref[itm:06-1c]{c} und \hyperref[itm:06-1e]{e} wird festgelegt durch%
   \label{itm:06-3}
 
   \begin{enumerate}
