--- a/artikel/07.tex
+++ b/artikel/07.tex
@@ -6,7 +6,8 @@
 
 \begin{enumerate}
 
-  \item Beruht die \hyperref[itm:04-2]{Verarbeitung} auf einer \hyperref[itm:04-11]{Einwilligung}, muss der \hyperref
+  \item Beruht die \hyperref[itm:04-2]{Verarbeitung} auf einer \hyperref[itm:04-11]{Einwilligung}\comment{vgl.
+  \hyperref[itm:06-1a]{Artikel 6 Absatz 1 Buchstabe a}}, muss der \hyperref
    [itm:04-7]{Verantwortliche} nachweisen können, dass die \hyperref[itm:04-1]{betroffene Person} in die \hyperref
    [itm:04-2]{Verarbeitung} ihrer \hyperref[itm:04-1]{personenbezogenen Daten} eingewilligt hat.%
   \label{itm:07-1}
