--- a/artikel/09.tex
+++ b/artikel/09.tex
@@ -15,16 +15,19 @@
     Person ist untersagt.%
   \label{itm:09-1}
 
-  \item \hyperref[itm:09-1]{Absatz 1} gilt nicht in folgenden Fällen:%
+  \item \hyperref[itm:09-1]{Absatz 1} gilt nicht in folgenden Fällen:\comment{Pflicht zur Datenschutz"=Folgenabschätzung
+   nach \hyperref[itm:35-3b]{Artikel 35 Absatz 3 Buchstabe b}}%
   \label{itm:09-2}
 
   \begin{enumerate}
   
     \item Die \hyperref[itm:04-1]{betroffene Person} hat in die \hyperref[itm:04-2]{Verarbeitung} der
      genannten \hyperref[itm:04-1]{personenbezogenen Daten} für einen oder mehrere festgelegte Zwecke ausdrücklich
-     eingewilligt, es sei denn, nach Unionsrecht oder dem Recht der Mitgliedstaaten kann das Verbot nach \hyperref
-     [itm:09-1]{Absatz 1} durch die \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]{betroffenen Person}
-     nicht aufgehoben werden,%
+     eingewilligt\comment{\hyperref[ch:7]{Artikel 7} beachten}\comment{Einwilligung als Verarbeitungsgrundlage führt
+     bei automatisierten Verfahren zu Recht auf Datenübertragbarkeit nach \hyperref[itm:20-1]{Artikel 20 Absatz 1}}, es
+     sei denn, nach Unionsrecht oder dem Recht der Mitgliedstaaten kann das Verbot nach \hyperref[itm:09-1]{Absatz 1}
+     durch die \hyperref[itm:04-11]{Einwilligung} der \hyperref[itm:04-1]{betroffenen Person} nicht aufgehoben
+     werden\comment{Profiling"=Verbot nach \hyperref[itm:22-4]{Artikel 22 Absatz 4} beachten},%
     \label{itm:09-2a}
 
     \item die \hyperref[itm:04-2]{Verarbeitung} ist erforderlich, damit der \hyperref[itm:04-7]{Verantwortliche} oder
@@ -87,7 +90,8 @@
      Datenschutz wahrt und angemessene und spezifische Maßnahmen zur Wahrung der Grundrechte und Interessen
      der \hyperref[itm:04-1]{betroffenen Person} vorsieht, für im öffentlichen Interesse liegende Archivzwecke, für
      wissenschaftliche oder historische Forschungszwecke oder für statistische Zwecke gemäß \hyperref[itm:89-1]
-     {Artikel 89 Absatz 1} erforderlich.%
+     {Artikel 89 Absatz 1}\comment{Widerspruchsrecht nach \hyperref[itm:21-6]{Artikel 26 Absatz 6} beachten}
+     erforderlich.%
     \label{itm:09-2j}
 
   \end{enumerate}
