--- a/artikel/17.tex
+++ b/artikel/17.tex
@@ -48,11 +48,12 @@
 
   \item Hat der \hyperref[itm:04-7]{Verantwortliche} die \hyperref[itm:04-1]{personenbezogenen Daten} öffentlich gemacht
    und ist er gemäß \hyperref[itm:17-1]{Absatz 1} zu deren Löschung verpflichtet, so trifft er unter Berücksichtigung
-   der verfügbaren Technologie und der Implementierungskosten angemessene Maßnahmen, auch technischer Art, um für die
-   Datenverarbeitung \hyperref[itm:04-7]{Verantwortliche}, die die \hyperref[itm:04-1]{personenbezogenen Daten}
-   verarbeiten, darüber zu informieren, dass eine \hyperref[itm:04-1]{betroffene Person} von ihnen die Löschung aller
-   Links zu diesen \hyperref[itm:04-1]{personenbezogenen Daten} oder von Kopien oder Replikationen dieser
-   personenbezogenen Daten verlangt hat.%
+   der verfügbaren Technologie und der Implementierungskosten angemessene Maßnahmen,\comment{Leitlinien, Empfehlungen
+   und bewährte Verfahren des Ausschusses siehe \hyperref[itm:70-1d]{Artikel 70 Absatz 1 Buchstabe d}} auch technischer
+   Art, um für die Datenverarbeitung \hyperref[itm:04-7]{Verantwortliche}, die die \hyperref[itm:04-1]
+   {personenbezogenen Daten} verarbeiten, darüber zu informieren, dass eine \hyperref[itm:04-1]{betroffene Person} von
+   ihnen die Löschung aller Links zu diesen \hyperref[itm:04-1]{personenbezogenen Daten} oder von Kopien oder
+   Replikationen dieser personenbezogenen Daten verlangt hat.%
   \label{itm:17-2}
 
   \item Die Absätze \hyperref[itm:17-1]{1} und \hyperref[itm:17-2]{2} gelten nicht, soweit die \hyperref[itm:04-2]
