--- a/artikel/22.tex
+++ b/artikel/22.tex
@@ -8,11 +8,15 @@
 
   \item Die \hyperref[itm:04-1]{betroffene Person} hat das Recht, nicht einer ausschließlich auf einer
    automatisierten \hyperref[itm:04-2]{Verarbeitung} -- einschließlich \hyperref[itm:04-4]{Profiling} -- beruhenden
-   Entscheidung unterworfen zu werden, die ihr gegenüber rechtliche Wirkung entfaltet oder sie in ähnlicher Weise
-   erheblich beeinträchtigt.%
+   Entscheidung\comment{Benachrichtigungspflicht nach \hyperref[itm:13-2f]{Artikel 13 Absatz 2 Buchstabe f; Pflicht
+   zur Datenschutz"=Folgenabschätzung nach \hyperref[itm:35-3a]{Artikel 35 Absatz 3 Buchstabe a}},
+   \hyperref[itm:14-2g]{Artikel 14 Absatz 2 Buchstabe g} oder \hyperref[itm:15-1h]{Artikel 15 Absatz 1 Buchstabe h}
+   beachten} unterworfen zu werden, die ihr gegenüber
+   rechtliche Wirkung entfaltet oder sie in ähnlicher Weise erheblich beeinträchtigt.%
   \label{itm:22-1}
 
-  \item \hyperref[itm:22-1]{Absatz 1} gilt nicht, wenn die Entscheidung%
+  \item \hyperref[itm:22-1]{Absatz 1} gilt nicht, wenn die Entscheidung\comment{Leitlinien, Empfehlungen
+   und bewährte Verfahren des Ausschusses siehe \hyperref[itm:70-1f]{Artikel 70 Absatz 1 Buchstabe f}}%
   \label{itm:22-2}
 
   \begin{enumerate}
