--- a/artikel/28.tex
+++ b/artikel/28.tex
@@ -120,7 +120,8 @@
    {4} des vorliegenden Artikels genannten Fragen festlegen.%
   \label{itm:28-7}
 
-  \item Eine \hyperref[itm:04-21]{Aufsichtsbehörde} kann im Einklang mit dem Kohärenzverfahren gemäß \hyperref[ch:63]
+  \item Eine \hyperref[itm:04-21]{Aufsichtsbehörde} kann im Einklang mit dem Kohärenzverfahren\comment{Stellungnahme
+  siehe \hyperref[itm:64-1d]{Artikel 64 Absatz 1 Buchstabe d}} gemäß \hyperref[ch:63]
    {Artikel 63} Standardvertragsklauseln zur Regelung der in den Absätzen \hyperref[itm:28-3-1]{3} und \hyperref
    [itm:28-4]{4} des vorliegenden Artikels genannten Fragen festlegen.%
   \label{itm:28-8}
