--- a/artikel/35.tex
+++ b/artikel/35.tex
@@ -41,10 +41,11 @@
 
   \end{enumerate}
 
-  \item Die \hyperref[itm:04-21]{Aufsichtsbehörde} erstellt eine Liste der Verarbeitungsvorgänge, für die
-   gemäß \hyperref[itm:35-1]{Absatz 1} eine Datenschutz"=Folgenabschätzung durchzuführen ist, und veröffentlicht diese.
-   Die \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt diese Listen dem in \hyperref[ch:68]{Artikel 68} genannten
-   Ausschuss.%
+  \item Die \hyperref[itm:04-21]{Aufsichtsbehörde} erstellt eine Liste der Verarbeitungsvorgänge\comment{Die Listen des
+   BFdI und der DSK sind unter \cite{bfdi-dsfa-listen} zu finden.}, für die gemäß \hyperref[itm:35-1]{Absatz 1} eine
+   Datenschutz"=Folgenabschätzung durchzuführen ist, und veröffentlicht diese. Die \hyperref[itm:04-21]
+   {Aufsichtsbehörde} übermittelt diese Listen dem in \hyperref[ch:68]{Artikel 68} genannten Ausschuss.
+   \comment{Stellungnahme siehe \hyperref[itm:64-1a]{Artikel 64 Absatz 1 Buchstabe a}}%
   \label{itm:35-4}
 
   \item Die \hyperref[itm:04-21]{Aufsichtsbehörde} kann des Weiteren eine Liste der Arten von Verarbeitungsvorgängen
