--- a/artikel/40.tex
+++ b/artikel/40.tex
@@ -7,9 +7,13 @@
 \begin{enumerate}
 
   \item Die Mitgliedstaaten, die \hyperref[itm:04-21]{Aufsichtsbehörden}, der Ausschuss und die Kommission fördern die
-   Ausarbeitung von Verhaltensregeln, die nach Maßgabe der Besonderheiten der einzelnen Verarbeitungsbereiche und der
-   besonderen Bedürfnisse von Kleinstunternehmen sowie kleinen und mittleren \hyperref[itm:04-18]{Unternehmen} zur
-   ordnungsgemäßen Anwendung dieser Verordnung beitragen sollen.%
+   Ausarbeitung von Verhaltensregeln,\comment{geeignet zum Nachweis der Pflichterfüllung des Verantwortlichen (\hyperref
+   [itm:24-3]{Artikel 24 Absatz 3}), hinreichender Garantien des Auftragsverarbeiters (\hyperref[itm:28-5]{Artikel 28
+   Absatz 5}), der Sicherheit der Verarbeitung (\hyperref[itm:32-3]{Artikel 32 Absatz 3}) und als Garantien zur
+   Datenübermittlung (\hyperref[itm:46-2e]{Artikel 46 Absatz 2 Buchstabe e})} die nach Maßgabe der
+   Besonderheiten der einzelnen Verarbeitungsbereiche und der besonderen Bedürfnisse von Kleinstunternehmen sowie
+   kleinen und mittleren \hyperref[itm:04-18]{Unternehmen} zur ordnungsgemäßen Anwendung dieser Verordnung beitragen
+   sollen.%
   \label{itm:40-1}
 
   \item Verbände und andere Vereinigungen, die Kategorien von \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref
@@ -102,7 +106,8 @@
   \item Bezieht sich der Entwurf der Verhaltensregeln auf Verarbeitungstätigkeiten in mehreren Mitgliedstaaten, so legt
    die nach \hyperref[ch:55]{Artikel 55} zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} -- bevor sie den Entwurf der
    Verhaltensregeln bzw. den Entwurf zu deren Änderung oder Erweiterung genehmigt -- ihn nach dem Verfahren
-   gemäß \hyperref[ch:63]{Artikel 63} dem Ausschuss vor, der zu der Frage Stellung nimmt, ob der Entwurf der
+   gemäß \hyperref[ch:63]{Artikel 63} dem Ausschuss vor, der zu der Frage Stellung nimmt,\comment{Stellungnahme siehe
+   \hyperref[itm:64-1b]{Artikel 64 Absatz 1 Buchstabe b}} ob der Entwurf der
    Verhaltensregeln bzw. der Entwurf zu deren Änderung oder Erweiterung mit dieser Verordnung vereinbar ist oder -- im
    Fall nach \hyperref[itm:40-3]{Absatz 3 dieses Artikels} -- geeignete Garantien vorsieht.%
   \label{itm:40-7}
@@ -114,9 +119,10 @@
   \label{itm:40-8}
 
   \item Die Kommission kann im Wege von Durchführungsrechtsakten beschließen, dass die ihr gemäß \hyperref[itm:40-8]
-   {Absatz 8} übermittelten genehmigten Verhaltensregeln bzw. deren genehmigte Änderung oder Erweiterung allgemeine
-   Gültigkeit in der Union besitzen. Diese Durchführungsrechtsakte werden gemäß dem Prüfverfahren nach \hyperref
-   [itm:93-2]{Artikel 93 Absatz 2} erlassen.%
+   {Absatz 8} übermittelten genehmigten Verhaltensregeln\comment{Stellungnahme des Ausschusses siehe \hyperref
+   [itm:70-1x]{Artikel 70 Absatz 1 Buchstabe x}} bzw. deren genehmigte Änderung oder Erweiterung allgemeine Gültigkeit
+   in der Union besitzen. Diese Durchführungsrechtsakte werden gemäß dem Prüfverfahren nach \hyperref[itm:93-2]
+   {Artikel 93 Absatz 2} erlassen.%
   \label{itm:40-9}
 
   \item Die Kommission trägt dafür Sorge, dass die genehmigten Verhaltensregeln, denen gemäß \hyperref[itm:40-9]
@@ -124,7 +130,7 @@
   \label{itm:40-10}
 
   \item Der Ausschuss nimmt alle genehmigten Verhaltensregeln bzw. deren genehmigte Änderungen oder Erweiterungen in ein
-   Register auf und veröffentlicht sie in geeigneter Weise.%
+   Register\comment{verfügbar unter \cite{edpb-cc-reg}} auf und veröffentlicht sie in geeigneter Weise.%
   \label{itm:40-11}
 
 \end{enumerate}
