--- a/artikel/41.tex
+++ b/artikel/41.tex
@@ -44,7 +44,7 @@
 
   \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} übermittelt den Entwurf der Anforderungen an die
    Akkreditierung einer Stelle nach \hyperref[itm:41-1]{Absatz 1} gemäß dem Kohärenzverfahren nach \hyperref[ch:63]
-   {Artikel 63} an den Ausschuss.%
+   {Artikel 63} an den Ausschuss.\comment{Stellungnahme siehe \hyperref[itm:64-1c]{Artikel 64 Absatz 1 Buchstabe c}}%
   \label{itm:41-3}
 
   \item Unbeschadet der Aufgaben und Befugnisse der zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} und der
