--- a/artikel/42.tex
+++ b/artikel/42.tex
@@ -9,8 +9,11 @@
   \item Die Mitgliedstaaten, die \hyperref[itm:04-21]{Aufsichtsbehörden}, der Ausschuss und die Kommission fördern
    insbesondere auf Unionsebene die Einführung von datenschutzspezifischen Zertifizierungsverfahren sowie von
    Datenschutzsiegeln und -prüfzeichen, die dazu dienen, nachzuweisen, dass diese Verordnung bei Verarbeitungsvorgängen
-   von
-   \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeitern} eingehalten wird. Den besonderen
+   von \hyperref[itm:04-7]{Verantwortlichen} oder \hyperref[itm:04-8]{Auftragsverarbeitern} eingehalten wird.
+   \comment{geeignet zum Nachweis der Pflichterfüllung des Verantwortlichen (\hyperref[itm:24-3]{Artikel 24 Absatz 3}
+    und \hyperref[itm:25-3]{Artikel 25 Absatz 3}), hinreichender Garantien des Auftragsverarbeiters (\hyperref
+    [itm:28-5]{Artikel 28 Absatz 5}), der Sicherheit der Verarbeitung (\hyperref[itm:32-3]{Artikel 32 Absatz 3}) und
+    als Garantien zur Datenübermittlung (\hyperref[itm:46-2f]{Artikel 46 Absatz 2 Buchstabe f})} Den besonderen
     Bedürfnissen von Kleinstunternehmen sowie kleinen und mittleren \hyperref[itm:04-18]{Unternehmen} wird Rechnung
     getragen.%
   \label{itm:42-1}
@@ -44,6 +47,7 @@
    oder durch die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} anhand der von dieser zuständigen \hyperref
    [itm:04-21]{Aufsichtsbehörde} gemäß \hyperref[itm:58-3]{Artikel 58 Absatz 3} oder -- gemäß \hyperref[ch:63]
    {Artikel 63} -- durch den Ausschuss genehmigten Kriterien erteilt. Werden die Kriterien vom Ausschuss genehmigt,
+   \comment{Stellungnahme siehe \hyperref[itm:64-1c]{Artikel 64 Absatz 1 Buchstabe c}}
    kann dies zu einer gemeinsamen Zertifizierung, dem Europäischen Datenschutzsiegel, führen.%
   \label{itm:42-5}
 
