--- a/artikel/43.tex
+++ b/artikel/43.tex
@@ -65,7 +65,8 @@
   \item Die Akkreditierung von Zertifizierungsstellen nach den Absätzen \hyperref[itm:43-1]{1} und \hyperref[itm:43-2]
    {2} erfolgt anhand der Anforderungen, die von der gemäß Artikel \hyperref[ch:55]{55} oder \hyperref[ch:56]
    {56} zuständigen \hyperref[itm:04-21]{Aufsichtsbehörde} oder -- gemäß \hyperref[ch:63]{Artikel 63} -- von dem
-   Ausschuss genehmigt wurden. Im Fall einer Akkreditierung nach \hyperref[itm:43-1b]{Absatz 1 Buchstabe b des
+   Ausschuss\comment{Stellungnahme siehe \hyperref[itm:64-1c]{Artikel 64 Absatz 1 Buchstabe c}} genehmigt wurden. Im
+   Fall einer Akkreditierung nach \hyperref[itm:43-1b]{Absatz 1 Buchstabe b des
    vorliegenden Artikels} ergänzen diese Anforderungen diejenigen, die in der Verordnung (EG) Nr. 765/2008 und in den
    technischen Vorschriften, in denen die Methoden und Verfahren der Zertifizierungsstellen beschrieben werden,
    vorgesehen sind.%
