--- a/artikel/46.tex
+++ b/artikel/46.tex
@@ -32,13 +32,15 @@
     \label{itm:46-2c}
 
     \item von einer \hyperref[itm:04-21]{Aufsichtsbehörde} angenommenen Standarddatenschutzklauseln, die von der
-     Kommission gemäß dem Prüfverfahren nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} genehmigt wurden,%
+     Kommission gemäß dem Prüfverfahren nach \hyperref[itm:93-2]{Artikel 93 Absatz 2} genehmigt wurden,
+     \comment{Stellungnahme des Ausschusses siehe \hyperref[itm:64-1d]{Artikel 64 Absatz 1 Buchstabe d}}%
     \label{itm:46-2d}
 
     \item genehmigten Verhaltensregeln gemäß \hyperref[ch:40]{Artikel 40} zusammen mit rechtsverbindlichen und
      durchsetzbaren Verpflichtungen des \hyperref[itm:04-7]{Verantwortlichen} oder des \hyperref[itm:04-8]
-     {Auftragsverarbeiters} in dem Drittland zur Anwendung der geeigneten Garantien, einschließlich in Bezug auf die
-     Rechte der \hyperref[itm:04-1]{betroffenen Personen}, oder%
+     {Auftragsverarbeiters} in dem Drittland zur Anwendung der geeigneten Garantien,\comment{nachweisbar durch
+     geeignete Zertifizierung, siehe \hyperref[itm:42-2]{Artikel 42 Absatz 2}} einschließlich in Bezug auf die Rechte
+     der \hyperref[itm:04-1]{betroffenen Personen}, oder%
     \label{itm:46-2e}
 
     \item einem genehmigten Zertifizierungsmechanismus gemäß \hyperref[ch:42]{Artikel 42} zusammen mit
@@ -49,9 +51,9 @@
 
   \end{enumerate}
 
-  \item Vorbehaltlich der Genehmigung durch die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} können die geeigneten
-   Garantien gemäß
-   \hyperref[itm:46-1]{Absatz 1} auch insbesondere bestehen in%
+  \item Vorbehaltlich der Genehmigung durch die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde}\comment
+   {Stellungnahme des Ausschusses siehe \hyperref[itm:64-1e]{Artikel 64 Absatz 1 Buchstabe e}} können die geeigneten
+   Garantien gemäß \hyperref[itm:46-1]{Absatz 1} auch insbesondere bestehen in%
   \label{itm:46-3}
 
   \begin{enumerate}
