--- a/artikel/47.tex
+++ b/artikel/47.tex
@@ -6,9 +6,11 @@
 
 \begin{enumerate}
 
-  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} genehmigt gemäß dem Kohärenzverfahren nach \hyperref
-   [ch:63]{Artikel 63}
-   \hyperref[itm:04-20]{verbindliche interne Datenschutzvorschriften}, sofern diese%
+  \item Die zuständige \hyperref[itm:04-21]{Aufsichtsbehörde} genehmigt gemäß dem Kohärenzverfahren
+   \comment{Stellungnahme des Ausschusses siehe \hyperref[itm:64-1f]{Artikel 64 Absatz 1 Buchstabe f}; Register unter
+   \cite{edpb-bcr-reg} verfügbar.} nach \hyperref[ch:63]{Artikel 63} \hyperref[itm:04-20]{verbindliche interne
+    Datenschutzvorschriften},\comment{geeignet als Garantie zur Datenübermittlung, siehe \hyperref[itm:46-2b]
+    {Artikel 46 Absatz 2 Buchstabe b}} sofern diese%
   \label{itm:47-1}
 
   \begin{enumerate}
