--- a/artikel/54.tex
+++ b/artikel/54.tex
@@ -43,9 +43,10 @@
   \item Das Mitglied oder die Mitglieder und die Bediensteten jeder \hyperref[itm:04-21]{Aufsichtsbehörde} sind gemäß
    dem Unionsrecht oder dem Recht der Mitgliedstaaten sowohl während ihrer Amts- beziehungsweise Dienstzeit als auch
    nach deren Beendigung verpflichtet, über alle vertraulichen Informationen, die ihnen bei der Wahrnehmung ihrer
-   Aufgaben oder der Ausübung ihrer Befugnisse bekannt geworden sind, Verschwiegenheit zu wahren. Während dieser Amts-
-   beziehungsweise Dienstzeit gilt diese Verschwiegenheitspflicht insbesondere für die von natürlichen Personen
-   gemeldeten Verstößen gegen diese Verordnung.%
+   Aufgaben oder der Ausübung ihrer Befugnisse bekannt geworden sind, Verschwiegenheit zu wahren.\comment
+   {Leitlinien, Empfehlungen und bewährte Verfahren des Ausschusses siehe \hyperref[itm:70-1m]{Artikel 70 Absatz 1
+   Buchstabe m}} Während dieser Amts- beziehungsweise Dienstzeit gilt diese Verschwiegenheitspflicht insbesondere für
+   die von natürlichen Personen gemeldeten Verstößen gegen diese Verordnung.%
   \label{itm:54-2}
 
 \end{enumerate}
