--- a/artikel/58.tex
+++ b/artikel/58.tex
@@ -6,8 +6,9 @@
 
 \begin{enumerate}
 
-  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde} verfügt über sämtliche folgenden Untersuchungsbefugnisse, die es ihr
-   gestatten,%
+  \item Jede \hyperref[itm:04-21]{Aufsichtsbehörde}\comment{Leitlinien des Ausschusses zur Anwendung von Maßnahmen siehe
+  \hyperref[itm:70-1k]{Artikel 70 Absatz 1 Buchstabe k}} verfügt über sämtliche folgenden Untersuchungsbefugnisse, die
+  es ihr gestatten,%
   \label{itm:58-1}
 
   \begin{enumerate}
