--- a/artikel/60.tex
+++ b/artikel/60.tex
@@ -8,8 +8,9 @@
 
   \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} arbeitet mit den anderen \hyperref[itm:04-22]
    {betroffenen Aufsichtsbehörden} im Einklang mit diesem Artikel zusammen und bemüht sich dabei, einen Konsens zu
-   erzielen. Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} und die
-   \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} tauschen untereinander alle zweckdienlichen Informationen aus.%
+   erzielen.\comment{Register der Entscheidungen unter \cite{edpb-fossd-reg} verfügbar} Die federführende \hyperref
+   [itm:04-21]{Aufsichtsbehörde} und die \hyperref[itm:04-22]{betroffenen Aufsichtsbehörden} tauschen untereinander
+   alle zweckdienlichen Informationen aus.%
   \label{itm:60-1}
 
   \item Die federführende \hyperref[itm:04-21]{Aufsichtsbehörde} kann jederzeit andere \hyperref[itm:04-22]
