--- a/artikel/70.tex
+++ b/artikel/70.tex
@@ -131,15 +131,16 @@
     \label{itm:70-1v}
 
     \item Förderung des Austausches von Fachwissen und von Dokumentationen über Datenschutzvorschriften und -praxis mit
-     Datenschutz\hyperref[itm:04-21]{aufsichtsbehörden} in aller Welt;%
+     Datenschutzaufsichtsbehörden in aller Welt;%
     \label{itm:70-1w}
 
     \item Abgabe von Stellungnahmen zu den auf Unionsebene erarbeiteten Verhaltensregeln gemäß \hyperref[itm:40-9]
      {Artikel 40 Absatz 9} und%
     \label{itm:70-1x}
 
-    \item Führung eines öffentlich zugänglichen elektronischen Registers der Beschlüsse der \hyperref[itm:04-21]
-     {Aufsichtsbehörden} und Gerichte in Bezug auf Fragen, die im Rahmen des Kohärenzverfahrens behandelt wurden.%
+    \item Führung eines öffentlich zugänglichen elektronischen Registers\comment{verfügbar unter \cite
+     {edpb-dec-reg}} der Beschlüsse der \hyperref[itm:04-21]{Aufsichtsbehörden} und Gerichte in Bezug auf Fragen, die
+     im Rahmen des Kohärenzverfahrens behandelt wurden.%
     \label{itm:70-1y}
 
   \end{enumerate}
