--- a/support/preamble.tex
+++ b/support/preamble.tex
@@ -41,10 +41,11 @@
 
 
 % ---------------------------------------------------------------------------------------------------------------------
-% Spracheinstellungen
+% Spracheinstellungen, Silbentrennung
 \usepackage[ngerman]{babel}
 \usepackage[german=german-x-latest]{hyphsubst} % bessere Silbentrennung
 \usepackage{csquotes}
+\hyphenation{Ge-schäfts-prak-tik-en}
 
 
 % ---------------------------------------------------------------------------------------------------------------------
