--- a/artikel/32.tex
+++ b/artikel/32.tex
@@ -10,8 +10,10 @@
    und der Zwecke der \hyperref[itm:04-2]{Verarbeitung} sowie der unterschiedlichen Eintrittswahrscheinlichkeit und
    Schwere des Risikos für die Rechte und Freiheiten natürlicher Personen treffen der \hyperref[itm:04-7]
    {Verantwortliche} und der \hyperref[itm:04-8]{Auftragsverarbeiter} geeignete technische und organisatorische
-   Maßnahmen, um ein dem Risiko angemessenes Schutzniveau zu gewährleisten; diese Maßnahmen schließen gegebenenfalls
-   unter anderem Folgendes ein:%
+   Maßnahmen,\comment{Dokumentation der Maßnahmen im Verzeichnis der Verarbeitungstätigkeiten wenn möglich,
+   siehe \hyperref[itm:30-1g]{Artikel 30 Absatz 1 Buchstabe g} und \hyperref[itm:30-2d]{Absatz 2 Buchstabe d}} um ein
+   dem Risiko angemessenes Schutzniveau zu gewährleisten; diese Maßnahmen schließen gegebenenfalls unter anderem
+   Folgendes ein:%
   \label{itm:32-1}
 
   \begin{enumerate}
