--- a/artikel/33.tex
+++ b/artikel/33.tex
@@ -7,11 +7,13 @@
 \begin{enumerate}
 
   \item Im Falle einer \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} meldet der \hyperref
-   [itm:04-7]{Verantwortliche} unverzüglich und möglichst binnen 72 Stunden, nachdem ihm die Verletzung bekannt wurde,
-   diese der gemäß \hyperref[ch:55]{Artikel 55} zuständigen\hyperref[itm:04-21]{Aufsichtsbehörde}, es sei denn, dass
-   die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten} voraussichtlich nicht zu einem Risiko für
-   die Rechte und Freiheiten natürlicher Personen führt. Erfolgt die Meldung an die \hyperref[itm:04-21]
-   {Aufsichtsbehörde} nicht binnen 72 Stunden, so ist ihr eine Begründung für die Verzögerung beizufügen.%
+   [itm:04-7]{Verantwortliche} unverzüglich\comment{Leitlinien, Empfehlungen und bewährte Verfahren des Ausschusses
+   siehe \hyperref[itm:70-1g]{Artikel 70 Absatz 1 Buchstabe g}} und möglichst binnen 72 Stunden, nachdem ihm die
+   Verletzung bekannt wurde, diese der gemäß \hyperref[ch:55]{Artikel 55} zuständigen \hyperref[itm:04-21]
+   {Aufsichtsbehörde}, es sei denn, dass die \hyperref[itm:04-12]{Verletzung des Schutzes personenbezogener Daten}
+   voraussichtlich nicht zu einem Risiko für die Rechte und Freiheiten natürlicher Personen führt. Erfolgt die Meldung
+   an die \hyperref[itm:04-21]{Aufsichtsbehörde} nicht binnen 72 Stunden, so ist ihr eine Begründung für die
+   Verzögerung beizufügen.%
   \label{itm:33-1}
 
   \item Wenn dem \hyperref[itm:04-8]{Auftragsverarbeiter} eine \hyperref[itm:04-12]{Verletzung des Schutzes
