--- a/artikel/49.tex
+++ b/artikel/49.tex
@@ -8,9 +8,10 @@
 
   \item Falls weder ein Angemessenheitsbeschluss nach \hyperref[itm:45-3]{Artikel 45 Absatz 3} vorliegt noch geeignete
    Garantien nach \hyperref[ch:46]{Artikel 46}, einschließlich \hyperref[itm:04-20]{verbindlicher interner
-   Datenschutzvorschriften}, bestehen, ist eine Übermittlung oder eine Reihe von Übermittlungen \hyperref[itm:04-1]
-   {personenbezogener Daten} an ein Drittland oder an eine \hyperref[itm:04-26]{internationale Organisation} nur unter
-   einer der folgenden Bedingungen zulässig:%
+   Datenschutzvorschriften}, bestehen,\comment{Leitlinien, Empfehlungen und bewährte Verfahren des Ausschusses
+   siehe \hyperref[itm:70-1j]{Artikel 70 Absatz 1 Buchstabe j}} ist eine Übermittlung oder eine Reihe von
+   Übermittlungen \hyperref[itm:04-1]{personenbezogener Daten} an ein Drittland oder an eine \hyperref[itm:04-26]
+   {internationale Organisation} nur unter einer der folgenden Bedingungen zulässig:%
   \label{itm:49-1-1}
 
   \begin{enumerate}
@@ -59,12 +60,14 @@
    {betroffenen Personen} betrifft, für die Wahrung der zwingenden berechtigten Interessen des
   \hyperref[itm:04-7]{Verantwortlichen} erforderlich ist, sofern die Interessen oder die Rechte und Freiheiten
    der \hyperref[itm:04-1]{betroffenen Person} nicht überwiegen, und der \hyperref[itm:04-7]{Verantwortliche} alle
-   Umstände der Datenübermittlung beurteilt und auf der Grundlage dieser Beurteilung geeignete Garantien in Bezug auf
-   den Schutz \hyperref[itm:04-1]{personenbezogener Daten} vorgesehen hat. Der \hyperref[itm:04-7]
-   {Verantwortliche} setzt die \hyperref[itm:04-21]{Aufsichtsbehörde} von der Übermittlung in Kenntnis. Der \hyperref
-   [itm:04-7]{Verantwortliche} unterrichtet die \hyperref[itm:04-1]{betroffene Person} über die Übermittlung und seine
-   zwingenden berechtigten Interessen; dies erfolgt zusätzlich zu den der \hyperref[itm:04-1]{betroffenen Person} nach
-   den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} mitgeteilten Informationen.%
+   Umstände der Datenübermittlung beurteilt und auf der Grundlage dieser Beurteilung geeignete Garantien
+   \comment{Dokumentation der Garantien im Verzeichnis der Verarbeitungstätigkeiten notwendig, siehe \hyperref
+    [itm:30-1e]{Artikel 30 Absatz 1 Buchstabe e} und \hyperref[itm:30-2c]{Absatz 2 Buchstabe c}} in Bezug auf den
+    Schutz \hyperref[itm:04-1]{personenbezogener Daten} vorgesehen hat. Der \hyperref[itm:04-7]{Verantwortliche} setzt
+    die \hyperref[itm:04-21]{Aufsichtsbehörde} von der Übermittlung in Kenntnis. Der \hyperref[itm:04-7]
+    {Verantwortliche} unterrichtet die \hyperref[itm:04-1]{betroffene Person} über die Übermittlung und seine
+    zwingenden berechtigten Interessen; dies erfolgt zusätzlich zu den der \hyperref[itm:04-1]{betroffenen Person} nach
+    den Artikeln \hyperref[ch:13]{13} und \hyperref[ch:14]{14} mitgeteilten Informationen.%
   \label{itm:49-1-2}
 
   \item Datenübermittlungen gemäß \hyperref[itm:49-1-1g]{Absatz 1 Unterabsatz 1 Buchstabe g} dürfen nicht die Gesamtheit
